<resources>
    <string name="app_name">Task729</string>

    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="my_remind">我的提醒</string>
    <string name="work_remind">工作提醒</string>
    <string name="instruction_remind">指令提醒</string>
    <string name="dairy_remind">日志提醒</string>
    <string name="check_remind">审批提醒</string>
    <string name="focus_remind">我关注的</string>
    <string name="schedule_remind">日程提醒</string>
    <string name="need_to_respond">需要回执的</string>
    <string name="reply">回复我的</string>
    <string name="send">我发出的</string>
    <string name="atme">AT我的</string>
    <string name="atmysector">AT我的部门</string>
    <string name="praise">我收到的赞</string>
    <string name="settime">时间：</string>
    <string name="setdate">日期：</string>
    <string name="confirm">确 定</string>
    <string name="cancel">取 消</string>
    <string name="check_schedule_remind">查看提醒</string>
    <string name="setrepeat">重复：</string>

    <drawable name="clr_white">#ffffff</drawable>
    <drawable name="clr_normal">#f3f3f3</drawable>
    <drawable name="clr_pressed">#01bad4</drawable>
    <drawable name="clr_background">#106bb9</drawable>

    <string name="setting_remind">接受消息推送</string>
    <string name="sound">声音</string>
    <string name="vibration">振动</string>
</resources>
